# antarctica

./: .gitignore
antarctica-midigen/: CMakeLists.txt  antarctica.qrc  main.cpp  midicalc.cpp  midicalc.hpp
antarctica-midigen/20220219/: CMakeLists.txt  main.cpp  midicalc.cpp  midicalc.hpp
antarctica-midigen/data/: Schoenberg_-_Sechs_kleine_Klavierstcke_Op._19.mid  chords.csv  chords.ods  scales_cleaned_sorted.csv  scales_cleaned_sorted.ods
antarctica-web/: README.md  config.js  package.json  server.js
antarctica-web/server-modules/: cborGenerator.js  docxGenerator.js  jsonGenerator.js  xmlGenerator.js
antarctica-web/static/: audioAnalyser.js  autoPilot.js  buttonPlus.js  camSliders.js  cameraAnimation.js  gm_instrument_patch_map.csv  htmlViewControl.js  index.html  joysticks.js  playControl.js  rating.js  replayPanel.js  scales_cleaned_sorted.csv  scene.js  sceneInit.js  sceneLoader.js  sceneMaterials.js  session.js  sliderPlus.js  sound.js  soundParam.js  soundparams.json  valuePlus.js
antarctica-web/static/loops/: soundparams.json
antarctica-web/systemctl/: antarctica-web.service
